[package]
name = "lapce-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
flate2 = "1.0.25"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust", rev = "1657b855016c6bb50953e74eba4d079bf3173d63" }
